--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".base.BaseApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.roy_sun.awesomeshop_imitative.ui.activity.SplashActivity"
