--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Feb 16 19:31:24 CST 2016
+#Wed Feb 17 14:34:08 CST 2016
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=1080
