--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+
+
+    compile "com.android.support:support-v4:23.1.1"
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
 }
