--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".base.BaseApplication">
         <activity
             android:name="com.roy_sun.awesomeshop_imitative.ui.activity.SplashActivity"
             android:label="@string/app_name"
@@ -19,7 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MainActivity" />
+        <activity android:name=".ui.activity.Home.SaleActivity"/>
+        <activity android:name=".ui.activity.Home.TimeActivity"/>
+        <activity android:name=".ui.activity.Home.HotActivity"/>
+        <activity android:name=".ui.activity.Home.NewActivity"/>
+        <activity android:name=".ui.activity.Home.RecommendActivity"/>
+        <activity android:name=".ui.activity.Home.ProductInfoActivity"/>
     </application>
 
 </manifest>
